feat: configure spring security cors for netlify